// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel returns for development 1`] = `
Object {
  "es5": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "browsers": Array [
              "and_chr >= 67",
              "and_ff >= 18",
              "and_uc >= 11.8",
              "android >= 67",
              "not android <= 4.4.4",
              "chrome >= 49",
              "edge >= 12",
              "firefox >= 18",
              "ios_saf >= 10",
              "not op_mini all",
              "op_mob >= 46",
              "opera >= 36",
              "safari >= 10",
              "samsung >= 5",
            ],
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
  "module": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
      "react-hot-loader/babel",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "esmodules": true,
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
  "node": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "node": "8.10",
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
}
`;

exports[`Babel returns for production 1`] = `
Object {
  "es5": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "browsers": Array [
              "and_chr >= 67",
              "and_ff >= 18",
              "and_uc >= 11.8",
              "android >= 67",
              "not android <= 4.4.4",
              "chrome >= 49",
              "edge >= 12",
              "firefox >= 18",
              "ios_saf >= 10",
              "not op_mini all",
              "op_mob >= 46",
              "opera >= 36",
              "safari >= 10",
              "samsung >= 5",
            ],
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
  "module": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "esmodules": true,
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
  "node": Object {
    "plugins": Array [
      "transform-object-rest-spread",
      "transform-class-properties",
    ],
    "presets": Array [
      Array [
        "env",
        Object {
          "targets": Object {
            "node": "8.10",
          },
          "useBuiltIns": "usage",
        },
      ],
      "react",
    ],
  },
}
`;
